@@ -128,7 +128,7 @@ public final class TramoSeatsProtos {
       "s_boundary\030\005 \001(\001\022\033\n\023seas_boundary_at_pi\030" +
       "\006 \001(\001\022\027\n\017bias_correction\030\007 \001(\010\022\017\n\007nfcast" +
       "s\030\010 \001(\005\022\017\n\007nbcasts\030\t \001(\005\022-\n\talgorithm\030\n " +
-      "\001(\0162\032.tramoseats.SeatsAlgorithm\"\226\016\n\tTram" +
+      "\001(\0162\032.tramoseats.SeatsAlgorithm\"\260\016\n\tTram" +
       "oSpec\022.\n\005basic\030\001 \001(\0132\037.tramoseats.TramoS" +
       "pec.BasicSpec\0226\n\ttransform\030\002 \001(\0132#.tramo" +
       "seats.TramoSpec.TransformSpec\0222\n\007outlier" +
@@ -138,86 +138,86 @@ public final class TramoSeatsProtos {
       ".AutoModelSpec\0228\n\nregression\030\006 \001(\0132$.tra" +
       "moseats.TramoSpec.RegressionSpec\0224\n\010esti" +
       "mate\030\007 \001(\0132\".tramoseats.TramoSpec.Estima" +
-      "teSpec\032G\n\tBasicSpec\022\037\n\004span\030\001 \001(\0132\021.jd3." +
-      "TimeSelector\022\031\n\021preliminary_check\030\003 \001(\010\032" +
-      "\227\001\n\rTransformSpec\0221\n\016transformation\030\001 \001(" +
-      "\0162\031.modelling.Transformation\022\013\n\003fct\030\002 \001(" +
-      "\001\022)\n\006adjust\030\003 \001(\0162\031.modelling.LengthOfPe" +
-      "riod\022\033\n\023outliers_correction\030\004 \001(\010\032\227\001\n\013Ou" +
-      "tlierSpec\022\017\n\007enabled\030\001 \001(\010\022\037\n\004span\030\002 \001(\013" +
-      "2\021.jd3.TimeSelector\022\n\n\002ao\030\003 \001(\010\022\n\n\002ls\030\004 " +
-      "\001(\010\022\n\n\002tc\030\005 \001(\010\022\n\n\002so\030\006 \001(\010\022\n\n\002va\030\007 \001(\001\022" +
-      "\016\n\006tcrate\030\010 \001(\001\022\n\n\002ml\030\t \001(\010\032\232\001\n\rAutoMode" +
-      "lSpec\022\017\n\007enabled\030\001 \001(\010\022\016\n\006cancel\030\002 \001(\001\022\013" +
-      "\n\003ub1\030\003 \001(\001\022\013\n\003ub2\030\004 \001(\001\022\013\n\003pcr\030\005 \001(\001\022\n\n" +
-      "\002pc\030\006 \001(\001\022\014\n\004tsig\030\007 \001(\001\022\022\n\naccept_def\030\010 " +
-      "\001(\010\022\023\n\013ami_compare\030\t \001(\010\032\207\001\n\nEasterSpec\022" +
-      "$\n\004type\030\001 \001(\0162\026.tramoseats.EasterType\022\020\n" +
-      "\010duration\030\002 \001(\005\022\016\n\006julian\030\003 \001(\010\022\014\n\004test\030" +
-      "\004 \001(\010\022#\n\013coefficient\030\n \001(\0132\016.jd3.Paramet" +
-      "er\032\326\002\n\017TradingDaysSpec\022\"\n\002td\030\001 \001(\0162\026.mod" +
-      "elling.TradingDays\022%\n\002lp\030\002 \001(\0162\031.modelli" +
-      "ng.LengthOfPeriod\022\020\n\010holidays\030\003 \001(\t\022\r\n\005u" +
-      "sers\030\004 \003(\t\022\t\n\001w\030\005 \001(\005\022)\n\004test\030\006 \001(\0162\033.tr" +
-      "amoseats.TradingDaysTest\022.\n\004auto\030\007 \001(\0162 " +
-      ".tramoseats.AutomaticTradingDays\022\r\n\005ptes" +
-      "t\030\010 \001(\001\022\023\n\013auto_adjust\030\t \001(\010\022&\n\016tdcoeffi" +
-      "cients\030\n \003(\0132\016.jd3.Parameter\022%\n\rlpcoeffi" +
-      "cient\030\013 \001(\0132\016.jd3.Parameter\032\313\002\n\016Regressi" +
-      "onSpec\022\034\n\004mean\030\001 \001(\0132\016.jd3.Parameter\022\022\n\n" +
-      "check_mean\030\002 \001(\010\0221\n\002td\030\003 \001(\0132%.tramoseat" +
-      "s.TramoSpec.TradingDaysSpec\0220\n\006easter\030\004 " +
-      "\001(\0132 .tramoseats.TramoSpec.EasterSpec\022$\n" +
-      "\010outliers\030\005 \003(\0132\022.modelling.Outlier\022$\n\005u" +
-      "sers\030\006 \003(\0132\025.modelling.TsVariable\0226\n\rint" +
-      "erventions\030\007 \003(\0132\037.modelling.Interventio" +
-      "nVariable\022\036\n\005ramps\030\010 \003(\0132\017.modelling.Ram" +
-      "p\032U\n\014EstimateSpec\022\037\n\004span\030\001 \001(\0132\021.jd3.Ti" +
-      "meSelector\022\n\n\002ml\030\002 \001(\010\022\013\n\003tol\030\003 \001(\001\022\013\n\003u" +
-      "bp\030\004 \001(\001\"\347\001\n\014SeatsResults\022,\n\013seats_arima" +
-      "\030\001 \001(\0132\025.modelling.ArimaModelH\000\022.\n\014seats" +
-      "_sarima\030\002 \001(\0132\026.modelling.SarimaModelH\000\022" +
-      "\014\n\004mean\030\003 \001(\010\0228\n\027canonical_decomposition" +
-      "\030\004 \001(\0132\027.modelling.UcarimaModel\022(\n\013stoch" +
-      "astics\030\005 \001(\0132\023.sa.SaDecompositionB\007\n\005mod" +
-      "el\"\301\001\n\021TramoSeatsResults\022.\n\rpreprocessin" +
-      "g\030\001 \001(\0132\027.regarima.RegArimaModel\022/\n\rdeco" +
-      "mposition\030\002 \001(\0132\030.tramoseats.SeatsResult" +
-      "s\022\"\n\005final\030\003 \001(\0132\023.sa.SaDecomposition\022\'\n" +
-      "\016diagnostics_sa\030\005 \001(\0132\017.sa.Diagnostics\"\262" +
-      "\002\n\013TramoOutput\022\'\n\006result\030\001 \001(\0132\027.regarim" +
-      "a.RegArimaModel\022.\n\017estimation_spec\030\002 \001(\013" +
-      "2\025.tramoseats.TramoSpec\022*\n\013result_spec\030\003" +
-      " \001(\0132\025.tramoseats.TramoSpec\022 \n\003log\030\004 \001(\013" +
-      "2\023.jd3.ProcessingLogs\0225\n\007details\030\005 \003(\0132$" +
-      ".tramoseats.TramoOutput.DetailsEntry\032E\n\014" +
-      "DetailsEntry\022\013\n\003key\030\001 \001(\t\022$\n\005value\030\002 \001(\013" +
-      "2\025.jd3.ProcessingDetail:\0028\001\"\270\002\n\020TramoSea" +
-      "tsOutput\022-\n\006result\030\001 \001(\0132\035.tramoseats.Tr" +
-      "amoSeatsResults\022)\n\017estimation_spec\030\002 \001(\013" +
-      "2\020.tramoseats.Spec\022%\n\013result_spec\030\003 \001(\0132" +
-      "\020.tramoseats.Spec\022 \n\003log\030\004 \001(\0132\023.jd3.Pro" +
-      "cessingLogs\022:\n\007details\030\005 \003(\0132).tramoseat" +
-      "s.TramoSeatsOutput.DetailsEntry\032E\n\014Detai" +
-      "lsEntry\022\013\n\003key\030\001 \001(\t\022$\n\005value\030\002 \001(\0132\025.jd" +
-      "3.ProcessingDetail:\0028\001\"\206\001\n\004Spec\022$\n\005tramo" +
-      "\030\001 \001(\0132\025.tramoseats.TramoSpec\022,\n\005seats\030\002" +
-      " \001(\0132\035.tramoseats.DecompositionSpec\022*\n\014b" +
-      "enchmarking\030\003 \001(\0132\024.sa.BenchmarkingSpec*" +
-      "S\n\022SeatsApproximation\022\022\n\016SEATS_APP_NONE\020" +
-      "\000\022\024\n\020SEATS_APP_LEGACY\020\001\022\023\n\017SEATS_APP_NOI" +
-      "SY\020\002*D\n\016SeatsAlgorithm\022\024\n\020SEATS_ALG_BURM" +
-      "AN\020\000\022\034\n\030SEATS_ALG_KALMANSMOOTHER\020\001*m\n\024Au" +
-      "tomaticTradingDays\022\016\n\nTD_AUTO_NO\020\000\022\021\n\rTD" +
-      "_AUTO_FTEST\020\001\022\020\n\014TD_AUTO_WALD\020\002\022\017\n\013TD_AU" +
-      "TO_AIC\020\003\022\017\n\013TD_AUTO_BIC\020\004*N\n\017TradingDays" +
-      "Test\022\016\n\nTD_TEST_NO\020\000\022\026\n\022TD_TEST_SEPARATE" +
-      "_T\020\001\022\023\n\017TD_TEST_JOINT_F\020\002*n\n\nEasterType\022" +
-      "\021\n\rEASTER_UNUSED\020\000\022\023\n\017EASTER_STANDARD\020\001\022" +
-      "\030\n\024EASTER_INCLUDEEASTER\020\002\022\036\n\032EASTER_INCL" +
-      "UDEEASTERMONDAY\020\003B5\n\037jdplus.tramoseats.b" +
-      "ase.protobufB\020TramoSeatsProtosP\001P\000P\001P\002P\003" +
-      "b\006proto3"
+      "teSpec\032a\n\tBasicSpec\022\037\n\004span\030\001 \001(\0132\021.jd3." +
+      "TimeSelector\022\031\n\021preliminary_check\030\003 \001(\010\022" +
+      "\030\n\020annual_frequency\030\004 \001(\005\032\227\001\n\rTransformS" +
+      "pec\0221\n\016transformation\030\001 \001(\0162\031.modelling." +
+      "Transformation\022\013\n\003fct\030\002 \001(\001\022)\n\006adjust\030\003 " +
+      "\001(\0162\031.modelling.LengthOfPeriod\022\033\n\023outlie" +
+      "rs_correction\030\004 \001(\010\032\227\001\n\013OutlierSpec\022\017\n\007e" +
+      "nabled\030\001 \001(\010\022\037\n\004span\030\002 \001(\0132\021.jd3.TimeSel" +
+      "ector\022\n\n\002ao\030\003 \001(\010\022\n\n\002ls\030\004 \001(\010\022\n\n\002tc\030\005 \001(" +
+      "\010\022\n\n\002so\030\006 \001(\010\022\n\n\002va\030\007 \001(\001\022\016\n\006tcrate\030\010 \001(" +
+      "\001\022\n\n\002ml\030\t \001(\010\032\232\001\n\rAutoModelSpec\022\017\n\007enabl" +
+      "ed\030\001 \001(\010\022\016\n\006cancel\030\002 \001(\001\022\013\n\003ub1\030\003 \001(\001\022\013\n" +
+      "\003ub2\030\004 \001(\001\022\013\n\003pcr\030\005 \001(\001\022\n\n\002pc\030\006 \001(\001\022\014\n\004t" +
+      "sig\030\007 \001(\001\022\022\n\naccept_def\030\010 \001(\010\022\023\n\013ami_com" +
+      "pare\030\t \001(\010\032\207\001\n\nEasterSpec\022$\n\004type\030\001 \001(\0162" +
+      "\026.tramoseats.EasterType\022\020\n\010duration\030\002 \001(" +
+      "\005\022\016\n\006julian\030\003 \001(\010\022\014\n\004test\030\004 \001(\010\022#\n\013coeff" +
+      "icient\030\n \001(\0132\016.jd3.Parameter\032\326\002\n\017Trading" +
+      "DaysSpec\022\"\n\002td\030\001 \001(\0162\026.modelling.Trading" +
+      "Days\022%\n\002lp\030\002 \001(\0162\031.modelling.LengthOfPer" +
+      "iod\022\020\n\010holidays\030\003 \001(\t\022\r\n\005users\030\004 \003(\t\022\t\n\001" +
+      "w\030\005 \001(\005\022)\n\004test\030\006 \001(\0162\033.tramoseats.Tradi" +
+      "ngDaysTest\022.\n\004auto\030\007 \001(\0162 .tramoseats.Au" +
+      "tomaticTradingDays\022\r\n\005ptest\030\010 \001(\001\022\023\n\013aut" +
+      "o_adjust\030\t \001(\010\022&\n\016tdcoefficients\030\n \003(\0132\016" +
+      ".jd3.Parameter\022%\n\rlpcoefficient\030\013 \001(\0132\016." +
+      "jd3.Parameter\032\313\002\n\016RegressionSpec\022\034\n\004mean" +
+      "\030\001 \001(\0132\016.jd3.Parameter\022\022\n\ncheck_mean\030\002 \001" +
+      "(\010\0221\n\002td\030\003 \001(\0132%.tramoseats.TramoSpec.Tr" +
+      "adingDaysSpec\0220\n\006easter\030\004 \001(\0132 .tramosea" +
+      "ts.TramoSpec.EasterSpec\022$\n\010outliers\030\005 \003(" +
+      "\0132\022.modelling.Outlier\022$\n\005users\030\006 \003(\0132\025.m" +
+      "odelling.TsVariable\0226\n\rinterventions\030\007 \003" +
+      "(\0132\037.modelling.InterventionVariable\022\036\n\005r" +
+      "amps\030\010 \003(\0132\017.modelling.Ramp\032U\n\014EstimateS" +
+      "pec\022\037\n\004span\030\001 \001(\0132\021.jd3.TimeSelector\022\n\n\002" +
+      "ml\030\002 \001(\010\022\013\n\003tol\030\003 \001(\001\022\013\n\003ubp\030\004 \001(\001\"\347\001\n\014S" +
+      "eatsResults\022,\n\013seats_arima\030\001 \001(\0132\025.model" +
+      "ling.ArimaModelH\000\022.\n\014seats_sarima\030\002 \001(\0132" +
+      "\026.modelling.SarimaModelH\000\022\014\n\004mean\030\003 \001(\010\022" +
+      "8\n\027canonical_decomposition\030\004 \001(\0132\027.model" +
+      "ling.UcarimaModel\022(\n\013stochastics\030\005 \001(\0132\023" +
+      ".sa.SaDecompositionB\007\n\005model\"\301\001\n\021TramoSe" +
+      "atsResults\022.\n\rpreprocessing\030\001 \001(\0132\027.rega" +
+      "rima.RegArimaModel\022/\n\rdecomposition\030\002 \001(" +
+      "\0132\030.tramoseats.SeatsResults\022\"\n\005final\030\003 \001" +
+      "(\0132\023.sa.SaDecomposition\022\'\n\016diagnostics_s" +
+      "a\030\005 \001(\0132\017.sa.Diagnostics\"\262\002\n\013TramoOutput" +
+      "\022\'\n\006result\030\001 \001(\0132\027.regarima.RegArimaMode" +
+      "l\022.\n\017estimation_spec\030\002 \001(\0132\025.tramoseats." +
+      "TramoSpec\022*\n\013result_spec\030\003 \001(\0132\025.tramose" +
+      "ats.TramoSpec\022 \n\003log\030\004 \001(\0132\023.jd3.Process" +
+      "ingLogs\0225\n\007details\030\005 \003(\0132$.tramoseats.Tr" +
+      "amoOutput.DetailsEntry\032E\n\014DetailsEntry\022\013" +
+      "\n\003key\030\001 \001(\t\022$\n\005value\030\002 \001(\0132\025.jd3.Process" +
+      "ingDetail:\0028\001\"\270\002\n\020TramoSeatsOutput\022-\n\006re" +
+      "sult\030\001 \001(\0132\035.tramoseats.TramoSeatsResult" +
+      "s\022)\n\017estimation_spec\030\002 \001(\0132\020.tramoseats." +
+      "Spec\022%\n\013result_spec\030\003 \001(\0132\020.tramoseats.S" +
+      "pec\022 \n\003log\030\004 \001(\0132\023.jd3.ProcessingLogs\022:\n" +
+      "\007details\030\005 \003(\0132).tramoseats.TramoSeatsOu" +
+      "tput.DetailsEntry\032E\n\014DetailsEntry\022\013\n\003key" +
+      "\030\001 \001(\t\022$\n\005value\030\002 \001(\0132\025.jd3.ProcessingDe" +
+      "tail:\0028\001\"\206\001\n\004Spec\022$\n\005tramo\030\001 \001(\0132\025.tramo" +
+      "seats.TramoSpec\022,\n\005seats\030\002 \001(\0132\035.tramose" +
+      "ats.DecompositionSpec\022*\n\014benchmarking\030\003 " +
+      "\001(\0132\024.sa.BenchmarkingSpec*S\n\022SeatsApprox" +
+      "imation\022\022\n\016SEATS_APP_NONE\020\000\022\024\n\020SEATS_APP" +
+      "_LEGACY\020\001\022\023\n\017SEATS_APP_NOISY\020\002*D\n\016SeatsA" +
+      "lgorithm\022\024\n\020SEATS_ALG_BURMAN\020\000\022\034\n\030SEATS_" +
+      "ALG_KALMANSMOOTHER\020\001*m\n\024AutomaticTrading" +
+      "Days\022\016\n\nTD_AUTO_NO\020\000\022\021\n\rTD_AUTO_FTEST\020\001\022" +
+      "\020\n\014TD_AUTO_WALD\020\002\022\017\n\013TD_AUTO_AIC\020\003\022\017\n\013TD" +
+      "_AUTO_BIC\020\004*N\n\017TradingDaysTest\022\016\n\nTD_TES" +
+      "T_NO\020\000\022\026\n\022TD_TEST_SEPARATE_T\020\001\022\023\n\017TD_TES" +
+      "T_JOINT_F\020\002*n\n\nEasterType\022\021\n\rEASTER_UNUS" +
+      "ED\020\000\022\023\n\017EASTER_STANDARD\020\001\022\030\n\024EASTER_INCL" +
+      "UDEEASTER\020\002\022\036\n\032EASTER_INCLUDEEASTERMONDA" +
+      "Y\020\003B5\n\037jdplus.tramoseats.base.protobufB\020" +
+      "TramoSeatsProtosP\001P\000P\001P\002P\003b\006proto3"
     };
     descriptor = com.google.protobuf.Descriptors.FileDescriptor
       .internalBuildGeneratedFileFrom(descriptorData,
@@ -228,7 +228,7 @@ public final class TramoSeatsProtos {
           jdplus.sa.base.protobuf.SaProtos.getDescriptor(),
         });
     internal_static_tramoseats_DecompositionSpec_descriptor =
-      getDescriptor().getMessageTypes().getFirst();
+      getDescriptor().getMessageTypes().get(0);
     internal_static_tramoseats_DecompositionSpec_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_tramoseats_DecompositionSpec_descriptor,
@@ -240,11 +240,11 @@ public final class TramoSeatsProtos {
         internal_static_tramoseats_TramoSpec_descriptor,
         new java.lang.String[] { "Basic", "Transform", "Outlier", "Arima", "Automodel", "Regression", "Estimate", });
     internal_static_tramoseats_TramoSpec_BasicSpec_descriptor =
-      internal_static_tramoseats_TramoSpec_descriptor.getNestedTypes().getFirst();
+      internal_static_tramoseats_TramoSpec_descriptor.getNestedTypes().get(0);
     internal_static_tramoseats_TramoSpec_BasicSpec_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_tramoseats_TramoSpec_BasicSpec_descriptor,
-        new java.lang.String[] { "Span", "PreliminaryCheck", });
+        new java.lang.String[] { "Span", "PreliminaryCheck", "AnnualFrequency", });
     internal_static_tramoseats_TramoSpec_TransformSpec_descriptor =
       internal_static_tramoseats_TramoSpec_descriptor.getNestedTypes().get(1);
     internal_static_tramoseats_TramoSpec_TransformSpec_fieldAccessorTable = new
@@ -306,7 +306,7 @@ public final class TramoSeatsProtos {
         internal_static_tramoseats_TramoOutput_descriptor,
         new java.lang.String[] { "Result", "EstimationSpec", "ResultSpec", "Log", "Details", });
     internal_static_tramoseats_TramoOutput_DetailsEntry_descriptor =
-      internal_static_tramoseats_TramoOutput_descriptor.getNestedTypes().getFirst();
+      internal_static_tramoseats_TramoOutput_descriptor.getNestedTypes().get(0);
     internal_static_tramoseats_TramoOutput_DetailsEntry_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_tramoseats_TramoOutput_DetailsEntry_descriptor,
@@ -318,7 +318,7 @@ public final class TramoSeatsProtos {
         internal_static_tramoseats_TramoSeatsOutput_descriptor,
         new java.lang.String[] { "Result", "EstimationSpec", "ResultSpec", "Log", "Details", });
     internal_static_tramoseats_TramoSeatsOutput_DetailsEntry_descriptor =
-      internal_static_tramoseats_TramoSeatsOutput_descriptor.getNestedTypes().getFirst();
+      internal_static_tramoseats_TramoSeatsOutput_descriptor.getNestedTypes().get(0);
     internal_static_tramoseats_TramoSeatsOutput_DetailsEntry_fieldAccessorTable = new
       com.google.protobuf.GeneratedMessage.FieldAccessorTable(
         internal_static_tramoseats_TramoSeatsOutput_DetailsEntry_descriptor,
